<resources>
    <string name="app_name">Clink</string>
    <string name="action_settings">Settings</string>

    <string name="hint_name">Name</string>
    <string name="hint_category">Category</string>
    <string name="hint_description">Description</string>
    <string name="hint_code">Code (Api Key)</string>
    <string name="hint_location">Location</string>
    <string name="btn_submit">Create</string>

    <string name="create_gate">Create a new connection</string>
    <string name="open_gate">Open Gate</string>

    <string name="gate_name">Name</string>
    <string name="gate_category">Category</string>
    <string name="gate_description">Description</string>
    <string name="gate_code">Code</string>
    <string name="gate_longitude">Longitude</string>
    <string name="gate_latitude">Latitude</string>

    <string name="pref_gate_created">gateCreated</string>
    <string name="pref_previously_started">notFristUse</string>

    <string name="err_msg_name">Please enter a name</string>
    <string name="err_msg_category">Please enter a category</string>
    <string name="err_msg_description">Please enter a description</string>
    <string name="err_msg_code">Please enter a code</string>
    <string name="err_msg_location">XX.XXXX,XX.XXXX</string>

    <string name="lorum_ipsum"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="action_theme_swap">Theme Change</string>
    <string name="action_delete">Delete all Gates</string>
    <string name="card_img_description">Gate location image</string>
    <string name="details_img_description">Gate Location</string>

</resources>
