<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".GateForm">

    <TextView
        android:id="@+id/form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/form_sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="1"/>

    <TextView
        android:id="@+id/form_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/create_gate"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_category"
        app:layout_constraintEnd_toStartOf="@+id/input_layout_description"
        app:layout_constraintTop_toBottomOf="@id/form_sub_title"
        style="@style/text_layout_style">

        <EditText
            android:id="@+id/input_gate_name"
            android:hint="@string/hint_name"
            style="@style/input_text_style"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_category"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_description"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_name"
        style="@style/text_layout_style">

        <EditText
            android:id="@+id/input_gate_category"
            android:hint="@string/hint_category"
            style="@style/input_text_style" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_description"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_code"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_category"
        style="@style/text_layout_style">

        <EditText
            android:id="@+id/input_gate_description"
            android:hint="@string/hint_description"
            style="@style/input_text_style"  />
    </android.support.design.widget.TextInputLayout>


    <!--<android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_location"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_code"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_description"
        style="@style/text_layout_style">

        <EditText
            android:id="@+id/input_gate_location"
            android:hint="@string/hint_location"
            style="@style/input_text_style" />
    </android.support.design.widget.TextInputLayout>-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_code"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_description"
        style="@style/text_layout_style">

        <EditText
            android:id="@+id/input_gate_code"
            android:hint="@string/hint_code"
            style="@style/input_text_style" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:text="@string/btn_submit"
        android:textColor="?themeAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_code" />

</android.support.constraint.ConstraintLayout>
