<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardBackgroundColor="#FFF"
    card_view:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/info_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:textColor="@color/black"
            android:layout_below="@id/info_category"/>

        <ImageView
            android:id="@+id/location_image"
            android:transitionName="card_location_image"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/card_img_description"
            app:srcCompat="@drawable/location"/>

        <TextView
            android:id="@+id/info_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:lines="3"
            android:text="@string/lorum_ipsum"
            android:layout_below="@id/location_image"/>

        <Button
            android:id="@+id/open_gate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_description"
            android:layout_alignParentEnd="true"
            android:background="@color/white"
            android:text="@string/open_gate"
            android:textColor="?themeAccent"
            android:drawableStart="@drawable/ic_lock_close"
            style="?android:attr/borderlessButtonStyle" />

    </RelativeLayout>
</android.support.v7.widget.CardView>