<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <ImageView
        android:id="@+id/imageLocation"
        android:transitionName="details_location_image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/details_img_description"
        app:srcCompat="@drawable/location"/>

    <TextView
        android:id="@+id/details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="48sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/details_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="24sp" />

  <TextView
      android:id="@+id/details_coordinates"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="16dp"
      android:paddingEnd="16dp"
      android:paddingTop="8dp"
      android:textSize="20sp"
      android:drawableStart="@android:drawable/ic_menu_mylocation" />

    <TextView
        android:id="@+id/details_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:text="@string/lorum_ipsum" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/details_open_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/button_border"
            android:text="@string/open_gate"
            android:textColor="?themeAccent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_margin="16dp"
            android:drawableStart="@drawable/ic_lock_close"
            style="?android:attr/borderlessButtonStyle" />

    </RelativeLayout>
</LinearLayout>